Add initial io multiplexing implementation

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 vms/
 vol/
-*.tar
-.idea/
-.vscode/
-cmake-build-debug/
-mikolaj_depta/
-CMakeLists.txt/
-*.zip/
+**/*.tar.xz
+**/.idea
+**/.vscode
+**/cmake-build-debug
+**/mikolaj_depta
+**/CMakeLists.txt
+**/*.zip
+**/target
+**/*.lock
